created and images directory and added image to the page
added a h2 heading followed by a description of the recipe along with ingredients list

--- a/recipes/clam-chowder.html
+++ b/recipes/clam-chowder.html
@@ -8,6 +8,27 @@
 <body>
   <h1>Clam Chowder</h1>
 
+  <img src="images/clam-chowder.jpg" height="400" width="500">
+
+  <h2>Decription:</h2>
+
+  <p>Minced clams with potatoes and onion simmered in a broth of clam juice and half-and-half. A great, hearty soup to start a meal off with, or can even be a meal in itself.</p>
+
+  <h2>Ingredients:</h2>
+  <ul>
+    <li>4 slices of bacon</li>
+    <li>½ cup chopped onion</li>
+    <li>4 potatoes, peeled and cubed</li>
+    <li>1 tablespoon all-purpose flour</li>
+    <li>1 cup bottled clam juice</li>
+    <li>1 cup half-and-half</li>
+    <li>2 (6 ounce) cans minced clams</li>
+    <li>salt and pepper to taste</li>
+    <li>½ cup heavy cream (Optional)</li>
+    <li>2 tablespoons chopped fresh parsley</li>
+  </ul>
+
+  <h2>Steps:</h2>
   <a href="../index.html">Home</a>
 </body>
 </html>
