--- a/recipes/clam-chowder.html
+++ b/recipes/clam-chowder.html
@@ -29,6 +29,17 @@
   </ul>
 
   <h2>Steps:</h2>
+  <ol>
+    <li>In a large saucepan over medium high heat, fry the bacon until crisp, about 10 minutes. Drain on paper towels, reserving the bacon fat in the pan, crumble and set aside.</li>
+
+    <li>In the same saucepan with the bacon fat, saute the onion and potatoes for 3 to 5 minutes. Sprinkle with the flour and stir well to coat.</li>
+
+    <li>Pour in the clam juice, bring to a boil, reduce heat to low and simmer for about 15 minutes, or until potatoes are tender.</li>
+
+    <li>Add the half-and-half and minced clams and season with salt and pepper to taste. Finally, whisk in the heavy cream, if desired. Allow to heat through, about 5 minutes. Garnish with the parsley and crumbled bacon. (Note: Do not boil if adding cream.)</li>
+  
+  </ol>
+
   <a href="../index.html">Home</a>
 </body>
 </html>
