--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
+
+
+  <a href="/recipes/clam-chowder.html">Clam Chowder</a>
+  <a href="/recipes/maple-salmon.html">Maple Salmon</a>
+  <a href="/recipes/scallops-pasta.html">Scallops Pasta</a>
 </body>
 </html>
