--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
   <h1>Odin Recipes</h1>
 
-
-  <a href="/recipes/clam-chowder.html">Clam Chowder</a>
-  <a href="/recipes/maple-salmon.html">Maple Salmon</a>
-  <a href="/recipes/scallops-pasta.html">Scallops Pasta</a>
+<ul>
+  <li><a href="/recipes/clam-chowder.html">Clam Chowder</a></li>
+  <li><a href="/recipes/maple-salmon.html">Maple Salmon</a></li>
+  <li><a href="/recipes/scallops-pasta.html">Scallops Pasta</a></li>
+  </ul>
 </body>
 </html>
